feat: 优化分隔符对结果的影响